app/src/main/java/com/example/fail/MainDataItem.kt
package com.example.fail

data class MainDataItem(
    val articles: List<Article>,
    val status: String,
    val totalResults: Int
)